--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -53,7 +53,7 @@ button{
      
     width: 100px;
     height: 100px;
-    background: white;
+    background: transparent;
     opacity: 1;
     border-radius: 25px;
 
