--- a/src/styles/ScrollbarStyles.css
+++ b/src/styles/ScrollbarStyles.css
@@ -4,21 +4,26 @@
    /* Ancho de la barra de desplazamiento en navegadores que lo soportan */
   scrollbar-color: #f1f1f1 #888; /* Color del riel y del pulgar */
   
+  
 }
 
 .custom-scrollbar-container::-webkit-scrollbar {
    /* Ancho de la barra de desplazamiento */
-  width: 30%;
+   
+  width: 300px !important;
   height: 15px;
+  
 }
 
 .custom-scrollbar-container::-webkit-scrollbar-track {
   background-color: transparent; /* Color del riel */
+  
 }
 
 .custom-scrollbar-container::-webkit-scrollbar-thumb {
   background-color:  #d6d6d6; /* Color del pulgar */
   border-radius: 500px; /* Borde redondeado del pulgar */  
+  
   
   
 }
